# brain-conductor

./: .dockerignore  .env.sample  .eslintrc  .flake8  .gitignore  .htmllintrc  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  tox.ini
.github/workflows/: ci-actions.yaml
features/: chat.feature  environment.py  topic-hierarchy.feature
features/steps/: __init__.py  chat.py  nav.feature  nav.py  selenium_steps.py
src/brain_conductor/: __init__.py  chat.py  errors.py  models.py  personas.py  services.py  utils.py
src/brain_conductor/agents/: __init__.py
src/brain_conductor/agents/llm/: __init__.py  openai.py
src/brain_conductor/agents/toolkits/: __init__.py  coinmarketcap.py  dates.py
src/brain_conductor/agents/toolkits/hugging_face/: __init__.py  stable_diffusion.py
static/css/: main.3.css  main.css
static/js/: chat_client.js  main.7.js  main.js  measurement.js
templates/: base.html  email_contact_us.html  email_contact_us.txt  email_feedback.html  index.html
test/: __init__.py  test_brain_conductor.py  test_services.py  test_utils.py
